# CLarity

./: .gitignore  CMakeLists.txt  library.c  library.h
include/CLarity/: clarity.h  clarity_types.h  suite.h  test.h
include/internal/: loader.h  printer.h  suite.h  test.h
src/: clarity.c  printer.c  suite.c  test.c
src/loader/: clarity_loader_windows.c  loader.c
test/: CMakeLists.txt  test_multiple_suites.c  test_one_suite_multiple_tests.c  test_one_suite_one_test.c  test_one_suite_one_test_fail.c  test_one_suite_one_test_pass.c  test_one_suite_one_test_skip.c
